feat: complete security, payment, email notifications, pagination, performance, and unit test enhancements